# longomatch-1

./: .gitignore  LongoMatch.mds  Makefile.am  NEWS  RELEASE  configure.ac  longomatch.doap
LongoMatch/: LongoMatchGtk.mdp  Main.cs
LongoMatch.Addins/: AddinsManager.cs
LongoMatch.Addins.COE/: Makefile.am
LongoMatch.Core/: Config.cs  LongoMatch.Core.mdp  Makefile.am
LongoMatch.Core/Common/: CaptureSettings.cs  Color.cs  Constants.cs  Coordinates.cs  EncodingProfiles.cs  EncodingQuality.cs  EncodingSettings.cs  Enums.cs  Exceptions.cs  Gettext.cs  Image.cs  Job.cs  PlaysFilter.cs  SerializableObject.cs  SysInfo.cs  VideoStandards.cs
LongoMatch.Core/Handlers/: Handlers.cs  Multimedia.cs
LongoMatch.Core/Interfaces/: IDataBaseManager.cs  IDatabase.cs
LongoMatch.Core/Interfaces/GUI/: IAnalysisWindow.cs  IGUIToolkit.cs  IMainController.cs  IMainWindow.cs  IPlayer.cs  IProjectOptionsController.cs
LongoMatch.Core/Interfaces/Multimedia/: IMultimediaToolkit.cs  IVideoConverter.cs  IVideoEditor.cs
LongoMatch.Core/Stats/: CategoryStats.cs  ProjectStats.cs  SubCategoryStat.cs
LongoMatch.Core/Store/: Category.cs  MediaFile.cs  Play.cs  PlayListPlay.cs  Player.cs  Project.cs  SubCategory.cs  Tag.cs  TagStore.cs
LongoMatch.Core/Store/Templates/: CategoriesTemplate.cs  SubCategoryTemplate.cs  TeamTemplate.cs
LongoMatch.GUI/: LongoMatch.GUI.mdp  Makefile.am
LongoMatch.GUI.Multimedia/: LongoMatch.GUI.Multimedia.mdp  Makefile.am
LongoMatch.GUI.Multimedia/Gui/: CapturerBin.cs  PlayerBin.cs  PlayerCapturerBin.cs
LongoMatch.GUI.Multimedia/Gui/Utils/: Remuxer.cs
LongoMatch.GUI.Multimedia/gtk-gui/: LongoMatch.Gui.PlayerCapturerBin.cs  gui.stetic  objects.xml
LongoMatch.GUI/Gui/: Cairo.cs  GUIToolkit.cs  MainWindow.cs
LongoMatch.GUI/Gui/Base/: TemplatesEditorBase.cs  TimeScaleBase.cs  TimelineWidgetBase.cs
LongoMatch.GUI/Gui/Component/: AnalysisComponent.cs  ButtonsWidget.cs  CategoriesTemplateEditor.cs  CategoryProperties.cs  CoordinatesTagger.cs  DrawingToolBox.cs  GeneralPreferencesPanel.cs  LiveAnalysisPreferences.cs  PlayListWidget.cs  PlayersListTreeWidget.cs  PlayersTagger.cs  PlaysCoordinatesTagger.cs  PlaysListTreeWidget.cs  PlaysSelectionWidget.cs  ProjectDetailsWidget.cs  SubcategoiesTagsEditor.cs  TaggerWidget.cs  TeamTemplateEditor.cs  TimeLineWidget.cs  TimeReferenceWidget.cs  TimeScale.cs  TimelineLabelsWidget.cs  VideoPreferencesPanel.cs
LongoMatch.GUI/Gui/Component/Stats/: Plotter.cs  (+5 more)
LongoMatch.GUI/Gui/Dialog/: DatabasesManager.cs  DrawingTool.cs  EditCategoryDialog.cs  ProjectSelectionDialog.cs  ProjectsManager.cs  PropertiesEditor.cs  RenderingJobsDialog.cs  StatsViewer.cs  TaggerDialog.cs  TemplatesManager.cs  VideoConversionTool.cs  VideoEditionProperties.cs
LongoMatch.GUI/Gui/Helpers/: FileChooserHelper.cs  MessagesHelpers.cs  Misc.cs
LongoMatch.GUI/Gui/TreeView/: CategoriesFilterTreeView.cs  CategoriesTreeView.cs  ListTreeViewBase.cs  PlayListTreeView.cs  PlaysTreeView.cs  SubCategoriesTreeView.cs
LongoMatch.GUI/gtk-gui/: LongoMatch.Gui.Component.AnalysisComponent.cs  LongoMatch.Gui.Component.ButtonsWidget.cs  LongoMatch.Gui.Component.CategoryProperties.cs  LongoMatch.Gui.Component.CoordinatesTagger.cs  LongoMatch.Gui.Component.GameViewer.cs  LongoMatch.Gui.Component.GeneralPreferencesPanel.cs  LongoMatch.Gui.Component.LiveAnalysisPreferences.cs  LongoMatch.Gui.Component.PlayerProperties.cs  LongoMatch.Gui.Component.PlaysCoordinatesTagger.cs  LongoMatch.Gui.Component.ProjectDetailsWidget.cs  LongoMatch.Gui.Component.Stats.CategoriesViewer.cs  LongoMatch.Gui.Component.Stats.CategoryViewer.cs  LongoMatch.Gui.Component.Stats.Plotter.cs  LongoMatch.Gui.Component.Stats.SubCategoryViewer.cs  LongoMatch.Gui.Component.SubcategoiesTagsEditor.cs  LongoMatch.Gui.Component.TaggerWidget.cs  LongoMatch.Gui.Component.VideoPreferencesPanel.cs  LongoMatch.Gui.Dialog.DatabasesManager.cs  LongoMatch.Gui.Dialog.EntryDialog.cs  LongoMatch.Gui.Dialog.NewProjectDialog.cs  LongoMatch.Gui.Dialog.ProjectSelectionDialog.cs  LongoMatch.Gui.Dialog.ProjectsManager.cs  LongoMatch.Gui.Dialog.PropertiesEditor.cs  LongoMatch.Gui.Dialog.SnapshotsDialog.cs  LongoMatch.Gui.Dialog.StatsViewer.cs  LongoMatch.Gui.Dialog.SubCategoryTagsEditor.cs  LongoMatch.Gui.Dialog.TaggerDialog.cs  LongoMatch.Gui.Dialog.TemplatesManager.cs  LongoMatch.Gui.Dialog.VideoConversionTool.cs  LongoMatch.Gui.Dialog.VideoEditionProperties.cs  LongoMatch.Gui.MainWindow.cs  gui.stetic  objects.xml
LongoMatch.Multimedia/: LongoMatch.Multimedia.mdp  Makefile.am  MultimediaFactory.cs
LongoMatch.Multimedia/Capturer/: FakeCapturer.cs  GstCameraCapturer.cs
LongoMatch.Multimedia/Common/: Enum.cs  Handlers.cs
LongoMatch.Multimedia/Converter/: GstVideoConverter.cs  ObjectManager.cs
LongoMatch.Multimedia/Editor/: GstVideoSplitter.cs
LongoMatch.Multimedia/Interfaces/: ICapturer.cs
LongoMatch.Multimedia/Remuxer/: GstRemuxer.cs  MpegRemuxer.cs
LongoMatch.Multimedia/Utils/: GStreamer.cs  MpegRemuxer.cs  PreviewMediaFile.cs  Remuxer.cs  Seeker.cs
LongoMatch.Plugins/: Assembly.cs  CSVExporter.cs  LongoMatch.Plugins.mdp  Makefile.am  URICaptureEnabler.cs
LongoMatch.Services/: LongoMatch.Services.mdp  Makefile.am
LongoMatch.Services/Services/: Core.cs  DataBase.cs  DataBaseManager.cs  EventsManager.cs  MigrationsManager.cs  PlaylistManager.cs  ProjectOptionsManager.cs  ProjectsManager.cs  RenderingJobsManager.cs  TemplatesService.cs  VideoDrawingsManager.cs
images/: Makefile.am
libcesarplayer/: Makefile.am  bacon-video-widget-gst-0.10.c  common.h  gst-camera-capturer.c  gst-remuxer.c  gst-remuxer.h  gst-video-editor.c  gst-video-editor.h  gst-video-encoder.c  gst-video-encoder.h  liblongomatch.mdp  test-capturer.c  test-discoverer.c  test-editor.c  test-encoder.c  test-remuxer.c  video-utils.c  video-utils.h
oxyplot/: Makefile.am
oxyplot/OxyPlot/Render/: IRenderContext.cs
oxyplot/OxyPlot/Svg/: SvgExporter.cs  SvgRenderContext.cs
oxyplot/OxyPlotMono/: OxyPlotMono.csproj  OxyPlotMono.userprefs
po/: POTFILES.in  ca.po  cs.po  el.po  es.po  fr.po  nl.po  pt_BR.po  sl.po
tools/: deb-pkg.sh
