ASSEMBLY = OxyPlotMono
TARGET = library

LINK = $(REF_DEP_OXYPLOT)

SOURCES = \
	OxyPlot/LibraryDoc.cs \
	OxyPlot/NamespaceDoc.cs \
	OxyPlot/Annotations/Annotation.cs \
	OxyPlot/Annotations/AnnotationLayer.cs \
	OxyPlot/Annotations/ArrowAnnotation.cs \
	OxyPlot/Annotations/EllipseAnnotation.cs \
	OxyPlot/Annotations/ImageAnnotation.cs \
	OxyPlot/Annotations/LineAnnotation.cs \
	OxyPlot/Annotations/LineAnnotationType.cs \
	OxyPlot/Annotations/PolygonAnnotation.cs \
	OxyPlot/Annotations/RectangleAnnotation.cs \
	OxyPlot/Annotations/TextAnnotation.cs \
	OxyPlot/Annotations/TextualAnnotation.cs \
	OxyPlot/Annotations/TileMapAnnotation.cs \
	OxyPlot/Axes/AngleAxis.cs \
	OxyPlot/Axes/Axis.cs \
	OxyPlot/Axes/AxisChangeTypes.cs \
	OxyPlot/Axes/AxisChangedEventArgs.cs \
	OxyPlot/Axes/AxisLayer.cs \
	OxyPlot/Axes/AxisPosition.cs \
	OxyPlot/Axes/CategoryAxis.cs \
	OxyPlot/Axes/ColorAxis.cs \
	OxyPlot/Axes/DateTimeAxis.cs \
	OxyPlot/Axes/DateTimeIntervalType.cs \
	OxyPlot/Axes/LinearAxis.cs \
	OxyPlot/Axes/LogarithmicAxis.cs \
	OxyPlot/Axes/MagnitudeAxis.cs \
	OxyPlot/Axes/TickStyle.cs \
	OxyPlot/Axes/TimeSpanAxis.cs \
	OxyPlot/Foundation/ArrayHelper.cs \
	OxyPlot/Foundation/CanonicalSplineHelper.cs \
	OxyPlot/Foundation/CohenSutherlandClipping.cs \
	OxyPlot/Foundation/Conrec.cs \
	OxyPlot/Foundation/DataPoint.cs \
	OxyPlot/Foundation/DoubleExtensions.cs \
	OxyPlot/Foundation/FontWeights.cs \
	OxyPlot/Foundation/FractionHelper.cs \
	OxyPlot/Foundation/HorizontalAlignment.cs \
	OxyPlot/Foundation/IDataPoint.cs \
	OxyPlot/Foundation/IDataPointProvider.cs \
	OxyPlot/Foundation/LineStyle.cs \
	OxyPlot/Foundation/LineStyleHelper.cs \
	OxyPlot/Foundation/ListFiller.cs \
	OxyPlot/Foundation/MarkerType.cs \
	OxyPlot/Foundation/OxyColor.cs \
	OxyPlot/Foundation/OxyColors.cs \
	OxyPlot/Foundation/OxyImage.cs \
	OxyPlot/Foundation/OxyPalette.cs \
	OxyPlot/Foundation/OxyPalettes.cs \
	OxyPlot/Foundation/OxyPen.cs \
	OxyPlot/Foundation/OxyPenLineJoin.cs \
	OxyPlot/Foundation/OxyRect.cs \
	OxyPlot/Foundation/OxySize.cs \
	OxyPlot/Foundation/OxyThickness.cs \
	OxyPlot/Foundation/PlotLength.cs \
	OxyPlot/Foundation/PlotLengthUnit.cs \
	OxyPlot/Foundation/PngEncoder.cs \
	OxyPlot/Foundation/ReflectionHelper.cs \
	OxyPlot/Foundation/ScreenPoint.cs \
	OxyPlot/Foundation/ScreenPointHelper.cs \
	OxyPlot/Foundation/ScreenVector.cs \
	OxyPlot/Foundation/StreamExtensions.cs \
	OxyPlot/Foundation/StringHelper.cs \
	OxyPlot/Foundation/SutherlandHodgmanClipping.cs \
	OxyPlot/Foundation/VerticalAlignment.cs \
	OxyPlot/Foundation/XmlWriterBase.cs \
	OxyPlot/Foundation/CodeGenerator/CodeGenerationAttribute.cs \
	OxyPlot/Foundation/CodeGenerator/CodeGenerator.cs \
	OxyPlot/Foundation/CodeGenerator/CodeGeneratorStringExtensions.cs \
	OxyPlot/Foundation/CodeGenerator/ICodeGenerating.cs \
	OxyPlot/Manipulators/CursorType.cs \
	OxyPlot/Manipulators/IPlotControl.cs \
	OxyPlot/Manipulators/ManipulationEventArgs.cs \
	OxyPlot/Manipulators/ManipulatorBase.cs \
	OxyPlot/Manipulators/PanManipulator.cs \
	OxyPlot/Manipulators/ResetManipulator.cs \
	OxyPlot/Manipulators/TrackerHitResult.cs \
	OxyPlot/Manipulators/TrackerManipulator.cs \
	OxyPlot/Manipulators/ZoomManipulator.cs \
	OxyPlot/Manipulators/ZoomRectangleManipulator.cs \
	OxyPlot/Manipulators/ZoomStepManipulator.cs \
	OxyPlot/PlotModel/HitTestResult.cs \
	OxyPlot/PlotModel/OxyMouseButton.cs \
	OxyPlot/PlotModel/OxyMouseEventArgs.cs \
	OxyPlot/PlotModel/PlotElement.cs \
	OxyPlot/PlotModel/PlotModel.Legends.cs \
	OxyPlot/PlotModel/PlotModel.MouseEvents.cs \
	OxyPlot/PlotModel/PlotModel.Rendering.cs \
	OxyPlot/PlotModel/PlotModel.cs \
	OxyPlot/PlotModel/SelectablePlotElement.cs \
	OxyPlot/PlotModel/UIPlotElement.cs \
	OxyPlot/Properties/AssemblyInfo.cs \
	OxyPlot/Render/AngleAxisRenderer.cs \
	OxyPlot/Render/AxisRendererBase.cs \
	OxyPlot/Render/HorizontalAndVerticalAxisRenderer.cs \
	OxyPlot/Render/IRenderContext.cs \
	OxyPlot/Render/MagnitudeAxisRenderer.cs \
	OxyPlot/Render/MathRenderingExtensions.cs \
	OxyPlot/Render/RenderContextBase.cs \
	OxyPlot/Render/RenderingExtensions.cs \
	OxyPlot/Reporting/NamespaceDoc.cs \
	OxyPlot/Reporting/Report/DrawingFigure.cs \
	OxyPlot/Reporting/Report/Equation.cs \
	OxyPlot/Reporting/Report/Figure.cs \
	OxyPlot/Reporting/Report/Header.cs \
	OxyPlot/Reporting/Report/HeaderHelper.cs \
	OxyPlot/Reporting/Report/Image.cs \
	OxyPlot/Reporting/Report/ItemsTable.cs \
	OxyPlot/Reporting/Report/ItemsTableField.cs \
	OxyPlot/Reporting/Report/Paragraph.cs \
	OxyPlot/Reporting/Report/ParagraphStyle.cs \
	OxyPlot/Reporting/Report/PlotFigure.cs \
	OxyPlot/Reporting/Report/PropertyTable.cs \
	OxyPlot/Reporting/Report/Report.cs \
	OxyPlot/Reporting/Report/ReportItem.cs \
	OxyPlot/Reporting/Report/ReportSection.cs \
	OxyPlot/Reporting/Report/ReportStyle.cs \
	OxyPlot/Reporting/Report/Table.cs \
	OxyPlot/Reporting/Report/TableOfContents.cs \
	OxyPlot/Reporting/ReportWriters/HtmlReportWriter.cs \
	OxyPlot/Reporting/ReportWriters/IReportWriter.cs \
	OxyPlot/Reporting/ReportWriters/StringExtensions.cs \
	OxyPlot/Reporting/ReportWriters/TextReportWriter.cs \
	OxyPlot/Reporting/ReportWriters/WikiReportWriter.cs \
	OxyPlot/Series/AreaSeries.cs \
	OxyPlot/Series/BoxPlotItem.cs \
	OxyPlot/Series/BoxPlotSeries.cs \
	OxyPlot/Series/CandleStickSeries.cs \
	OxyPlot/Series/ContourSeries.cs \
	OxyPlot/Series/DataPointSeries.cs \
	OxyPlot/Series/FunctionSeries.cs \
	OxyPlot/Series/HeatMapSeries.cs \
	OxyPlot/Series/HighLowItem.cs \
	OxyPlot/Series/HighLowSeries.cs \
	OxyPlot/Series/ITrackableSeries.cs \
	OxyPlot/Series/ItemsSeries.cs \
	OxyPlot/Series/LineLegendPosition.cs \
	OxyPlot/Series/LineSeries.cs \
	OxyPlot/Series/PieSeries.cs \
	OxyPlot/Series/PieSlice.cs \
	OxyPlot/Series/ScatterPoint.cs \
	OxyPlot/Series/ScatterSeries.cs \
	OxyPlot/Series/Series.cs \
	OxyPlot/Series/StairStepSeries.cs \
	OxyPlot/Series/StemSeries.cs \
	OxyPlot/Series/TwoColorLineSeries.cs \
	OxyPlot/Series/XYAxisSeries.cs \
	OxyPlot/Series/BarSeries/BarItem.cs \
	OxyPlot/Series/BarSeries/BarItemBase.cs \
	OxyPlot/Series/BarSeries/BarSeries.cs \
	OxyPlot/Series/BarSeries/BarSeriesBase.cs \
	OxyPlot/Series/BarSeries/BarSeriesBase{T}.cs \
	OxyPlot/Series/BarSeries/CategorizedItem.cs \
	OxyPlot/Series/BarSeries/CategorizedSeries.cs \
	OxyPlot/Series/BarSeries/ColumnItem.cs \
	OxyPlot/Series/BarSeries/ColumnSeries.cs \
	OxyPlot/Series/BarSeries/ErrorColumnItem.cs \
	OxyPlot/Series/BarSeries/ErrorColumnSeries.cs \
	OxyPlot/Series/BarSeries/IStackableSeries.cs \
	OxyPlot/Series/BarSeries/IntervalBarItem.cs \
	OxyPlot/Series/BarSeries/IntervalBarSeries.cs \
	OxyPlot/Series/BarSeries/LabelPlacement.cs \
	OxyPlot/Series/BarSeries/RectangleBarItem.cs \
	OxyPlot/Series/BarSeries/RectangleBarSeries.cs \
	OxyPlot/Series/BarSeries/TornadoBarItem.cs \
	OxyPlot/Series/BarSeries/TornadoBarSeries.cs \
	OxyPlot/Svg/NativeMethods.cs \
	OxyPlot/Svg/SvgExporter.cs \
	OxyPlot/Svg/SvgRenderContext.cs \
	OxyPlot/Svg/SvgWriter.cs

RESOURCES =

include $(top_srcdir)/build/build.mk
